Fix the layout of the question block Using flexbox and wrap on the question

--- a/style.css
+++ b/style.css
@@ -435,7 +435,11 @@ body {
   padding: 10px;
 }
 
-
+#question_block{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
 
 
 
